fix legend position on small screen

--- a/src/input.css
+++ b/src/input.css
@@ -347,20 +347,20 @@ body, html {
   }
 
   #legend {
-    position: fixed;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: auto;
-    width: 100vw;
-    max-width: 100vw;
-    border-radius: 0;
-    font-size: 0.9rem;
-    padding: 0.2rem 0.5rem;
-    box-shadow: 0 -0.2rem 1rem rgba(0, 0, 0, 0.2);
-    z-index: 100;
+    position: fixed !important;
+    left: 0 !important;
+    right: 0 !important;
+    bottom: 0 !important;
+    top: auto !important;
+    width: 100vw !important;
+    max-width: 100vw !important;
+    border-radius: 0 !important;
+    font-size: 0.9rem !important;
+    padding: 0.2rem 0.5rem !important;
+    box-shadow: 0 -0.2rem 1rem rgba(0, 0, 0, 0.2) !important;
+    z-index: 100 !important;
+    transform: none !important;
   }
-
   .legend {
     flex-direction: row;
     flex-wrap: wrap;
